# tag-refiner

./: .gitignore  README.md  config.json.sample  pyproject.toml  tag_add.txt.sample  tag_remove.txt.sample
sample/: sample01.txt  sample02.txt  sample03.txt
tag_refiner/: __init__.py  cli.py  config.py  core.py
test/: test_tag_refiner.py
