[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tag-refiner"
version = "1.0.0"
description = "WD14 Danbooru形式のタグ整形CLIツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
tag-refiner = "tag_refiner.cli:app"

[tool.setuptools]
packages = ["tag_refiner"]
